# ToriMerge

./: .gitignore  README.md  pyproject.toml  torimerge-cli-debug.spec  torimerge-cli.spec  torimerge-gui-debug.spec  torimerge-gui.spec
.github/workflows/: ci.yml  windows-build.yml
examples/: template_order.txt
scripts/: build_win_exe.ps1
src/torimerge/: cli.py  constants.py  eml_builder.py  excel_loader.py  group_merge.py  gui.py  template_engine.py  types.py
src/torimerge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_eml_builder.py  test_group_merge.py  test_template_engine.py
