[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torimerge"
version = "0.1.0"
description = "Excel to Thunderbird .eml mail merge tool"
authors = [{ name = "Devin AI" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "jinja2>=3.1",
]

[project.scripts]
torimerge = "torimerge.cli:main"
torimerge-gui = "torimerge.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
